Add icons&compinfo (#1010)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,57 @@ character_ai:
   
 soonta:
   - com.ziiforce.soonta/com.ziiforce.chameleon.MainActivity
+
+action_notch:
+  - com.androxus.touchthenotch/com.androxus.touchthenotch.ui.activities.MainActivity
+
+auto_typer:
+  - dev.tberghuis.btmacrokb/dev.tberghuis.btmacrokb.MainActivity
+
+edenred_wallet:
+  - edenred.mx.mobile.services/edenred.mx.mobile.services.MainActivity
+
+habits_streak:
+  - com.adrienblc.habitstracker/com.adrienblc.habitstracker.MainActivity
+
+hoarder_app:
+  - app.hoarder.hoardermobile/app.hoarder.hoardermobile.MainActivity
+
+mods_maps_skin_for_minecraft:
+  - com.mods.maps.mine/com.mods.maps.mine.ui.MainActivity
+
+pokemon_tgc_pocket:
+  - jp.pokemon.pokemontcgp/com.unity3d.player.UnityPlayerActivity
+
+simple_calendar_easy_planner:
+  - com.komorebi.SimpleCalendar/com.sawadaru.calendar.ui.SplashActivity
+
+smart_mp3_tag_editor:
+  - tageditor.automatictageditor.audiotagging.audioedit.mp3edit/com.code.app.view.main.MainActivity
+
+vespucci:
+  - de.blau.android/de.blau.android.Splash
+
+thunderbird:
+  - net.thunderbird.android/com.fsck.k9.activity.MessageList
+
+kahoot:
+  - no.mobitroll.kahoot.android/no.mobitroll.kahoot.android.Default
+
+monument_valley:
+  - com.ustwo.monumentvalley/com.unity3d.player.UnityPlayerActivity
+
+bbc_news:
+  - bbc.mobile.news.uk/uk.co.bbc.chrysalis.discovery.ui.signin.SplashActivity
+
+google_photos:
+  - app.revanced.android.photos/com.google.android.apps.photos.home.HomeActivity
+
+dolby_atmos:
+  - com.motorola.dolby.dolbyui.ui/com.motorola.dolby.dolbyui.ui.LauncherActivity
+
+ente:
+  - io.ente.photos.independent/io.ente.photos.MainActivity
+
+youtube_revanced_alt_7:
+  - yt.rvx.noname.exe/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
