Add MyLiquigas and super.money icons + ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,16 @@ grab:
 
 quickmemo:
   - com.transsion.notebook/com.transsion.notebook.NotesList
+  - note.notesapp.notebook.notepad.stickynotes.colornote/note.notesapp.notebook.notepad.stickynotes.colornote.activity.Splash
+
+myliquigas:
+  - com.shvenergy.liquigas/com.shv.consumerportals.MainActivity
+
+bhim:
+  - in.org.npci.upiapp/pqzfrpu.ae
+
+supermoney:
+  - money.super.payments/com.supermoney.payments.MainActivity
+
+blitzer_de:
+  - de.blitzer.plus/com.eifrig.blitzerde.activity.splash.SplashActivity
