--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -94,7 +94,7 @@ kahoot:
 
 monument_valley:
   - com.ustwo.monumentvalley/com.unity3d.player.UnityPlayerActivity
-  
+
 google_photos:
   - app.revanced.android.photos/com.google.android.apps.photos.home.HomeActivity
 
@@ -106,3 +106,6 @@ ente:
 
 youtube_revanced_alt_7:
   - yt.rvx.noname.exe/com.google.android.youtube.app.honeycomb.Shell$HomeActivity
+
+security_bank:
+  - com.securitybank.bbx/com.securitybank.bbx.MainActivity
