Add Icons, Restore mLauncher and Alt

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -109,3 +109,9 @@ youtube_revanced_alt_7:
 
 security_bank:
   - com.securitybank.bbx/com.securitybank.bbx.MainActivity
+
+oplati:
+  - by.lwo.oplati/by.lwo.oplati.base.MainActivity
+
+lingodeer_plus:
+  - com.lingodeer.plus/com.lingo.lingoskill.ui.SplashActivity
