Remove my_toyota (duplicate of existing toyota icon

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -116,7 +116,7 @@ oplati:
 lingodeer_plus:
   - com.lingodeer.plus/com.lingo.lingoskill.ui.SplashActivity
 
-my_toyota:
+toyota:
   - jp.co.toyota.mytoyotaplus/jp.co.toyota.mytoyotaplus.activity.MainActivity
 
 gallery:
