--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -139,3 +139,12 @@ mbna:
 
 mparent:
   - ca.grics.mozaik.portail.parents/ca.grics.mozaik.portail.RootActivity
+
+nocta:
+  - com.cordylussoftware.nocta/com.cordylussoftware.nocta.MainActivity
+
+rescribe:
+  - grootlab.rescribe/grootlab.rescribe.MainActivity
+
+suby:
+  - com.merkost.suby/com.merkost.suby.MainActivity
