--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -148,3 +148,13 @@ rescribe:
 
 suby:
   - com.merkost.suby/com.merkost.suby.MainActivity
+
+capy_reader:
+  - com.capyreader.app/com.capyreader.app.MainActivity
+
+tilla:
+  - com.pavelrekun.tilla.premium/com.pavelrekun.tilla.navigation.NavigationActivity
+  - com.pavelrekun.tilla/com.pavelrekun.tilla.navigation.NavigationActivity
+
+logfox:
+  - com.f0x1d.logfox/com.f0x1d.logfox.presentation.ui.activity.MainActivity
