Add icons&compinfo (#1017)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -139,3 +139,22 @@ mbna:
 
 mparent:
   - ca.grics.mozaik.portail.parents/ca.grics.mozaik.portail.RootActivity
+
+nocta:
+  - com.cordylussoftware.nocta/com.cordylussoftware.nocta.MainActivity
+
+rescribe:
+  - grootlab.rescribe/grootlab.rescribe.MainActivity
+
+suby:
+  - com.merkost.suby/com.merkost.suby.MainActivity
+
+capy_reader:
+  - com.capyreader.app/com.capyreader.app.MainActivity
+
+tilla:
+  - com.pavelrekun.tilla.premium/com.pavelrekun.tilla.navigation.NavigationActivity
+  - com.pavelrekun.tilla/com.pavelrekun.tilla.navigation.NavigationActivity
+
+logfox:
+  - com.f0x1d.logfox/com.f0x1d.logfox.presentation.ui.activity.MainActivity
