--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -139,3 +139,6 @@ mbna:
 
 mparent:
   - ca.grics.mozaik.portail.parents/ca.grics.mozaik.portail.RootActivity
+
+amex_mobile:
+  - com.americanexpress.android.acctsvcs.ca/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity
