--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -227,3 +227,51 @@ droidfish:
 
 screen_recorder:
   - us.rec.screen/com.zipoapps.premiumhelper.ui.splash.PHSplashActivity
+
+adrenalin:
+  - com.itrack.adrenalinbelaru581466/com.itrack.mobifitnessdemo.activity.SplashActivity
+
+amazon_chime:
+  - com.amazon.chime/com.xodee.client.activity.Main
+
+brain_fm:
+  - com.brainfm.app/com.brainfm.app.MainActivity
+
+cava:
+  - com.cavagrill.cavagrill.android.app/com.cavagrill.cavagrill.android.app.MainActivity
+
+chatterui:
+  - com.Vali98.ChatterUI/com.Vali98.ChatterUI.MainActivity
+
+chordify:
+  - net.chordify.chordify/net.chordify.chordify.presentation.activities.navigation.NavigationActivity
+
+color_palette:
+  - com.blogspot.yashas003.colorpalette/com.blogspot.yashas003.colorpalette.activities.SplashScreen
+
+egym_wellpass:
+  - com.qualitrain.fitness/com.netpulse.mobile.launch.LaunchActivity
+
+feeld_dating:
+  - co.feeld/co.feeld.MainActivityDefault
+
+health_sync:
+  - nl.appyhapps.healthsync/nl.appyhapps.healthsync.MainActivity
+
+image_sync:
+  - com.ricohimaging.imagesync/com.ricohimaging.imagesync.TitleActivity
+
+pixel_thermometer:
+  - com.google.android.apps.pixel.health/com.google.android.apps.pixel.health.thermometer.ThermometerHomeActivity
+
+satstat:
+  - com.vonglasow.michael.satstat/com.vonglasow.michael.satstat.ui.MainActivity
+
+streetvoice:
+  - com.streetvoice.streetvoice/com.streetvoice.streetvoice.view.SplashActivity
+
+tokyo_disney_resort:
+  - jp.tokyodisneyresort.portalapp/jp.tokyodisneyresort.portalapp.ui.main.MainActivity
+
+virgin_pulse:
+  - com.virginpulse.virginpulse/com.virginpulse.features.splash.presentation.SplashActivity
