--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -275,3 +275,15 @@ tokyo_disney_resort:
 
 virgin_pulse:
   - com.virginpulse.virginpulse/com.virginpulse.features.splash.presentation.SplashActivity
+
+pingid:
+  - prod.com.pingidentity.pingid/com.pingidentity.v2.ui.screens.splash.PingIdSplashActivity
+
+revanced_manager:
+  - com.revanced.net.revancedmanager/com.revanced.net.revancedmanager.MainActivity
+
+my_aurora_forecast:
+  - com.jrustonapps.myauroraforecast/com.jrustonapps.myauroraforecast.controllers.MainActivity
+
+ir_remote:
+  - ir.remote.smg.tv/ir.remote.smg.tv.MainActivity
