Add icon for Anki Pro

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -287,3 +287,6 @@ my_aurora_forecast:
 
 ir_remote:
   - ir.remote.smg.tv/ir.remote.smg.tv.MainActivity
+ 
+ankipro:
+  - com.vedasapps.flashcards/com.vedasapps.flashcards.MainActivity
