Add icons + ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -287,3 +287,27 @@ my_aurora_forecast:
 
 ir_remote:
   - ir.remote.smg.tv/ir.remote.smg.tv.MainActivity
+
+ntes:
+  - cris.icms.ntes/cris.icms.ntes.LaunchApp
+
+mi_claro:
+  - com.claro.pe.miclaro/com.everis.miclaro.view.activity.SplashScreenActivity
+
+turkish_airlines:
+  - com.turkishairlines.mobile/com.turkishairlines.mobile.ui.ACSplash
+
+hamburger:
+  - de.freehamburger/de.freehamburger.MainActivity
+
+german_dictionary_alt_1:
+  - livio.pack.lang.de_DE/livio.pack.lang.de_DE.DictionaryView
+
+solitaire:
+  - org.rrl.solitaire.master.pro/org.rrl.solitaire.master.pro.AndroidLauncher
+
+bajaj_finserv:
+  - com.bfl.merchant/com.bfl.merchant.ui.splash.SplashActivity
+
+mi_canvas:
+  - com.miui.creation/com.miui.creation.ui.activity.CreationHomeActivity
