--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -314,3 +314,27 @@ bajaj_finserv:
 
 mi_canvas:
   - com.miui.creation/com.miui.creation.ui.activity.CreationHomeActivity
+
+adb_shell:
+  - com.github.superadb/com.github.superadb.SplashActivity
+
+fluidac:
+  - dev.jyotiraditya.fluidac/dev.jyotiraditya.fluidac.MainActivity
+
+keepassvault:
+  - com.ivanovsky.passnotes/com.ivanovsky.passnotes.presentation.StartActivity
+
+notallyx:
+  - com.philkes.notallyx/com.philkes.notallyx.presentation.activity.main.MainActivity
+
+pillo:
+  - xyz.rtrvr.pillo/xyz.rtrvr.pillo.ui.main.MainActivity
+
+powerapp:
+  - io.github.domi04151309.powerapp/io.github.domi04151309.powerapp.activities.SplashActivity
+
+refreezer:
+  - r.r.refreezer/r.r.refreezer.MainActivity
+
+zimly:
+  - app.zimly.backup/app.zimly.backup.MainActivity
