Add icons + component info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,12 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+datart:
+  - com.datart.production/com.datart.production.MainActivity
+
+jizdni_rady:
+  - cz.fhejl.pubtran/cz.fhejl.pubtran.activity.MainActivity
+
+nvidia_geforce_now:
+  - com.nvidia.geforcenow/com.nvidia.geforcenow.LaunchActivity
