--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,6 @@ jizdni_rady:
 
 nvidia_geforce_now:
   - com.nvidia.geforcenow/com.nvidia.geforcenow.LaunchActivity
+
+alive_app:
+  - com.bootiq2.gtsisic/app.futured.aliveapp.AppActivity
