feat: add bbdaily compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,5 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+bbdaily:
+    - com.raincan.android.hybrid/com.raincan.app.v2.splash.activity.SplashActivity
