Add icons + fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+chance_imageboard_browser:
+  - com.moffatman.chan/com.moffatman.chan.MainActivity
+
+corporate_benefits:
+  - de.corporatebenefits.app/de.corporatebenefits.app.SetupActivity
