--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -26,7 +26,7 @@ alive_app:
   - com.bootiq2.gtsisic/app.futured.aliveapp.AppActivity
 
 bbdaily:
-    - com.raincan.android.hybrid/com.raincan.app.v2.splash.activity.SplashActivity
+  - com.raincan.android.hybrid/com.raincan.app.v2.splash.activity.SplashActivity
 
 chance_imageboard_browser:
   - com.moffatman.chan/com.moffatman.chan.MainActivity
@@ -78,3 +78,9 @@ rem:
 
 tubesync:
   - tubesync.app/tubesync.app.MainActivity
+
+cuscon:
+  - com.froxot.cuscon.foss/com.froxot.cuscon.activities.MainActivity
+
+databackup_alt_1:
+  - com.xayah.databackup/com.xayah.databackup.ui.activity.screen.ScreenActivity
