--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -26,7 +26,7 @@ alive_app:
   - com.bootiq2.gtsisic/app.futured.aliveapp.AppActivity
 
 bbdaily:
-    - com.raincan.android.hybrid/com.raincan.app.v2.splash.activity.SplashActivity
+  - com.raincan.android.hybrid/com.raincan.app.v2.splash.activity.SplashActivity
 
 chance_imageboard_browser:
   - com.moffatman.chan/com.moffatman.chan.MainActivity
@@ -42,3 +42,45 @@ ra_guide:
 
 instawork:
   - com.instaworkmobile/com.instaworkmobile.MainActivity
+
+banco_de_la_nacion:
+  - pe.com.bn.app.bancodelanacion/pe.com.bn.app.bancodelanacion.ui.splash.SplashActivity
+
+boardgamegeek:
+  - com.boardgamegeek.app/com.boardgamegeek.app.MainActivity
+
+drawpile:
+  - net.drawpile/org.qtproject.qt5.android.bindings.QtActivity
+
+endowus:
+  - com.endowus.mobileapp/com.endowus.mobileapp.MainActivity
+
+fable_books_tv:
+  - co.fable.fable/co.fable.fable.ui.main.MainActivity
+
+mi_carpeta_ciudadana:
+  - es.gob.carpeta/com.sgad.android.carpeta.presentation.RootActivity
+
+muse_tts:
+  - io.github.kkoshin.muse/io.github.kkoshin.muse.MainActivity
+
+ntodotxt:
+  - de.tnmgl.ntodotxt/de.tnmgl.ntodotxt.MainActivity
+
+prtg:
+  - com.paessler.prtgandroid/com.paessler.prtgandroid.activities.PRTGDroidActivity
+
+sdk_monitor:
+  - com.bernaferrari.sdkmonitor/com.bernaferrari.sdkmonitor.MainActivity
+
+rem:
+  - rem.reminds.you/rem.reminds.you.MainActivity
+
+tubesync:
+  - tubesync.app/tubesync.app.MainActivity
+
+cuscon:
+  - com.froxot.cuscon.foss/com.froxot.cuscon.activities.MainActivity
+
+databackup_alt_1:
+  - com.xayah.databackup/com.xayah.databackup.ui.activity.screen.ScreenActivity
