--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,39 @@ ra_guide:
 
 instawork:
   - com.instaworkmobile/com.instaworkmobile.MainActivity
+
+universal_ca:
+  - com.universalstudios.hollywoodresort/com.universalstudios.upr_hollywood.MainActivity
+
+brother_print_service_plugin:
+  - com.brother.printservice/com.brother.printservice.settings.SettingsActivity
+
+myshake:
+  - edu.berkeley.bsl.myshake/com.dt.myshake.ui.ui.base.SplashActivity
+  
+myla311:
+  - com.LA.MyLA311/org.lacity.myla311.ui.activity.SplashScreenActivity
+
+turkish_airlines:
+  - com.turkishairlines.mobile/com.turkishairlines.mobile.ui.ACSplash
+  
+nintendo_music:
+  - com.nintendo.znba/com.nintendo.znba.MainActivity
+
+kanopy:
+  - com.kanopy/com.kanopy.RootTabbarActivity
+
+modern_animal:
+  - com.modernanimal/com.modernanimal.MainActivity
+
+wash_connect:
+  - com.wash.connect/com.wash.connect.MainActivity
+  
+star_trek_timelines:
+  - com.disruptorbeam.StarTrekTimelines/com.disruptorbeam.DisruptorBeamActivity
+  
+lorcana_tcg:
+  - com.ravensburger.disney.lorcana/com.unity3d.player.UnityPlayerActivity
+
+po_pixel:
+  - com.teenageengineering.pocketoperatorforpixel/com.unity3d.player.FoldablePlayerActivity
