--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -150,3 +150,9 @@ telekom_mail:
 
 tonkeeper:
   - com.ton_keeper/com.tonapps.tonkeeper.DefaultLauncherIcon
+
+tiktok:
+  - com.rezvorck.tiktokplugin/com.rezvorck.tiktokplugin.MainActivity
+
+wo_mic:
+  - com.wo.voice2/com.wo.voice2.MainActivity
