Add Zomato Restaurant Parner and Coupang icons + Fixes

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,9 @@ lorcana_tcg:
 
 po_pixel:
   - com.teenageengineering.pocketoperatorforpixel/com.unity3d.player.FoldablePlayerActivity
+
+zomato_restaurant_partner:
+  - com.application.services.partner/com.application.services.partner.ui.activities.SplashActivity
+
+coupang:
+  - com.coupang.mobile/com.coupang.mobile.activity.SplashActivity
