new compinfos: Yandex Go, Neotaste

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -162,3 +162,9 @@ tiktok:
 
 wo_mic:
   - com.wo.voice2/com.wo.voice2.MainActivity
+
+neotaste:
+  - app.foodisto.foodisto/pl.angrynerds.foodisto.ui.MainActivity
+
+yandex_go:
+  - ru.yandex.taxi/com.yandex.go.activity.alias.DefaultMainActivityAlias
