new icon: MyNoise (+ alt)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -168,3 +168,8 @@ neotaste:
 
 yandex_go:
   - ru.yandex.taxi/com.yandex.go.activity.alias.DefaultMainActivityAlias
+
+mynoise:
+  - com.mynoise.mynoise/com.mynoise.mynoise.MainActivity
+
+mynoise_alt_1: {}
