new compinfos: Citilink, Promsvyazbank, Kinopoisk, FixPrice

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -173,3 +173,15 @@ mynoise:
   - com.mynoise.mynoise/com.mynoise.mynoise.MainActivity
 
 mynoise_alt_1: {}
+
+citilink:
+  - ru.citilink/ru.citilink.app.presentation.mainactivity.MainActivity
+
+promsvyazbank:
+  - logo.com.mbanking/psb.com.mbanking.common.preloader.PreLoaderActivity
+
+kinopoisk:
+  - ru.kinopoisk/ru.kinopoisk.DefaultAlias
+
+fixprice:
+  - ru.bestprice.fixprice/ru.fixprice.application.android.MainActivity
