new icon: Drom Baza

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -185,3 +185,6 @@ kinopoisk:
 
 fixprice:
   - ru.bestprice.fixprice/ru.fixprice.application.android.MainActivity
+
+drom_baza:
+  - ru.drom.baza.android.app/ru.farpost.android.app.ui.activity.MainActivity
