--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -162,3 +162,29 @@ tiktok:
 
 wo_mic:
   - com.wo.voice2/com.wo.voice2.MainActivity
+
+neotaste:
+  - app.foodisto.foodisto/pl.angrynerds.foodisto.ui.MainActivity
+
+yandex_go:
+  - ru.yandex.taxi/com.yandex.go.activity.alias.DefaultMainActivityAlias
+
+mynoise:
+  - com.mynoise.mynoise/com.mynoise.mynoise.MainActivity
+
+mynoise_alt_1: {}
+
+citilink:
+  - ru.citilink/ru.citilink.app.presentation.mainactivity.MainActivity
+
+promsvyazbank:
+  - logo.com.mbanking/psb.com.mbanking.common.preloader.PreLoaderActivity
+
+kinopoisk:
+  - ru.kinopoisk/ru.kinopoisk.DefaultAlias
+
+fixprice:
+  - ru.bestprice.fixprice/ru.fixprice.application.android.MainActivity
+
+drom_baza:
+  - ru.drom.baza.android.app/ru.farpost.android.app.ui.activity.MainActivity
