add animetail icons
animetail, animetail preview

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+animetail:
+  - com.dark.animetailv2/eu.kanade.tachiyomi.ui.main.MainActivity
+
+animetail_preview:
+  - com.dark.animetailv2.debug/eu.kanade.tachiyomi.ui.main.MainActivity
