--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,6 @@ animetail:
 
 animetail_preview:
   - com.dark.animetailv2.debug/eu.kanade.tachiyomi.ui.main.MainActivity
+
+bluelink:
+  - com.hyundai.bluelink.eu.ux20/hmns.global.mobile.pages.splash.SplashActivity
