--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,6 @@ animetail_preview:
 
 bluelink:
   - com.hyundai.bluelink.eu.ux20/hmns.global.mobile.pages.splash.SplashActivity
+
+easy_bank:
+  - com.easybank.easybank/com.bawagpsk.bawagpsk.ui.splash.SplashActivity
