--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,6 @@ bluelink:
 
 easy_bank:
   - com.easybank.easybank/com.bawagpsk.bawagpsk.ui.splash.SplashActivity
+
+scalable:
+  - capital.scalable.droid/capital.scalable.droid.overlay.cockpit.screen.CockpitActivity
