--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,15 @@ animetail:
 
 animetail_preview:
   - com.dark.animetailv2.debug/eu.kanade.tachiyomi.ui.main.MainActivity
+
+geo_share:
+  - page.ooooo.geoshare/page.ooooo.geoshare.MainActivity
+
+pocketpal_ai:
+  - com.pocketpalai/com.pocketpal.MainActivity
+
+rbtlui:
+  - dev.bg.rbtlui/dev.bg.rbtlui.MainActivity
+
+wuthering_waves:
+  - com.kurogame.wutheringwaves.global/com.kurogame.wutheringwaves.global.KuroSplashActivity
