add icons & componentinfo
icons:
- icbc
- pdf converter

componentinfo:
- wifi map
- roku

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,15 @@ rbtlui:
 
 wuthering_waves:
   - com.kurogame.wutheringwaves.global/com.kurogame.wutheringwaves.global.KuroSplashActivity
+
+icbc:
+  - com.icbc.knowledge/com.icbc.knowledge.MainActivity
+
+pdf_converter:
+  - swati4star.createpdf/swati4star.createpdf.activity.SplashActivity
+
+wifi_map:
+  - io.wifimap.wifimap/io.wifimap.wifimap.main.splash.SplashActivity
+
+roku:
+  - com.roku.remote/com.roku.remote.ui.activities.BrowseContentActivity
