add bluelink, easybank, scalable (#1034)
* bluelink icons

* remove contribution request - my own actually

* easybank app

* scalable

* add alternative for firefox nightly

* incorporate feedback

* easybank shadow

* update icons

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -19,6 +19,15 @@ animetail:
 animetail_preview:
   - com.dark.animetailv2.debug/eu.kanade.tachiyomi.ui.main.MainActivity
 
+bluelink:
+  - com.hyundai.bluelink.eu.ux20/hmns.global.mobile.pages.splash.SplashActivity
+
+easy_bank:
+  - com.easybank.easybank/com.bawagpsk.bawagpsk.ui.splash.SplashActivity
+
+scalable:
+  - capital.scalable.droid/capital.scalable.droid.overlay.cockpit.screen.CockpitActivity
+
 geo_share:
   - page.ooooo.geoshare/page.ooooo.geoshare.MainActivity
 
