--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -28,6 +28,11 @@ easy_bank:
 scalable:
   - capital.scalable.droid/capital.scalable.droid.overlay.cockpit.screen.CockpitActivity
 
+onesec:
+  - wtf.riedel.onesec/wtf.riedel.onesec.OneSecActivity
+
+onesec_alt_1: {}
+
 geo_share:
   - page.ooooo.geoshare/page.ooooo.geoshare.MainActivity
 
