--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -56,3 +56,13 @@ wifi_map:
 
 roku:
   - com.roku.remote/com.roku.remote.ui.activities.BrowseContentActivity
+
+yatri:
+  - net.openkochi.yatri/in.juspay.mobility.MainActivity
+  - in.mobility.manayatri/in.juspay.mobility.MainActivity
+  - in.juspay.nammayatri/in.juspay.mobility.MainActivity
+
+yatri_driver:
+  - net.openkochi.yatripartner/in.juspay.mobility.MainActivity
+  - in.mobility.manayatripartner/in.juspay.mobility.MainActivity
+  - in.juspay.nammayatripartner/in.juspay.mobility.MainActivity
