--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -84,3 +84,9 @@ supertext_messenger:
 
 trojmiasto_pl:
   - pl.trojmiasto.mobile/pl.trojmiasto.mobile.activity.SplashscreenActivity
+
+rush:
+  - com.shub39.rush/com.shub39.rush.app.MainActivity
+
+honkai:
+  - com.HoYoverse.hkrpgsamsung/com.mihoyo.combosdk.ComboSDKActivity
