Add icons&compinfo (#1040)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,27 @@ yatri_driver:
   - net.openkochi.yatripartner/in.juspay.mobility.MainActivity
   - in.mobility.manayatripartner/in.juspay.mobility.MainActivity
   - in.juspay.nammayatripartner/in.juspay.mobility.MainActivity
+
+australian_retirement_trust:
+  - com.sunsuper.prod/com.art.ui.activities.SplashActivity
+
+code_editor:
+  - com.rhmsoft.code/com.rhmsoft.code.MainActivity
+
+jiopos_plus:
+  - com.jio.jpp1/com.ril.rpos.DIBLoginActivity
+
+recover_athletics:
+  - com.recoverathletics/com.recoverathletics.MainActivity
+
+supertext_messenger:
+  - se.stxt.android/se.stxt.android.ui.main.LauncherActivity
+
+trojmiasto_pl:
+  - pl.trojmiasto.mobile/pl.trojmiasto.mobile.activity.SplashscreenActivity
+
+rush:
+  - com.shub39.rush/com.shub39.rush.app.MainActivity
+
+honkai:
+  - com.HoYoverse.hkrpgsamsung/com.mihoyo.combosdk.ComboSDKActivity
