--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,3 +90,6 @@ rush:
 
 honkai:
   - com.HoYoverse.hkrpgsamsung/com.mihoyo.combosdk.ComboSDKActivity
+ 
+flybuys:
+  - com.coles.android.flybuys.release/au.com.flybuys.mobile.pages.welcome.ui.WelcomeActivity
