--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,6 +90,15 @@ rush:
 
 honkai:
   - com.HoYoverse.hkrpgsamsung/com.mihoyo.combosdk.ComboSDKActivity
- 
+
 flybuys:
   - com.coles.android.flybuys.release/au.com.flybuys.mobile.pages.welcome.ui.WelcomeActivity
+
+mypb:
+  - com.pbb.mypb/com.pbb.mypb.MainActivity
+
+trek:
+  - com.asiamobiliti.trek/com.asiamobiliti.trek.MainActivity
+
+lark:
+  - com.larksuite.suite/com.ss.android.lark.main.app.MainActivity
