add hlb icons and compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -102,3 +102,6 @@ trek:
 
 lark:
   - com.larksuite.suite/com.ss.android.lark.main.app.MainActivity
+
+hlb_connect:
+	- my.com.hongleongconnect.mobileconnect/my.com.hongleongconnect.mobileconnect.SplashScreenActivity
