fix tab indent to space, rework icons, add alternative variants

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -103,5 +103,9 @@ trek:
 lark:
   - com.larksuite.suite/com.ss.android.lark.main.app.MainActivity
 
+lark_alt_1: {}
+
 hlb_connect:
-	- my.com.hongleongconnect.mobileconnect/my.com.hongleongconnect.mobileconnect.SplashScreenActivity
+  - my.com.hongleongconnect.mobileconnect/my.com.hongleongconnect.mobileconnect.SplashScreenActivity
+
+hlb_connect_alt_1: {}
