Add 3 new icons and 1 missing comp info (#1044)
* add 2 new icons and comp info

* add hlb icons and compinfo

* fix tab indent to space, rework icons, add alternative variants

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -90,6 +90,22 @@ rush:
 
 honkai:
   - com.HoYoverse.hkrpgsamsung/com.mihoyo.combosdk.ComboSDKActivity
- 
+
 flybuys:
   - com.coles.android.flybuys.release/au.com.flybuys.mobile.pages.welcome.ui.WelcomeActivity
+
+mypb:
+  - com.pbb.mypb/com.pbb.mypb.MainActivity
+
+trek:
+  - com.asiamobiliti.trek/com.asiamobiliti.trek.MainActivity
+
+lark:
+  - com.larksuite.suite/com.ss.android.lark.main.app.MainActivity
+
+lark_alt_1: {}
+
+hlb_connect:
+  - my.com.hongleongconnect.mobileconnect/my.com.hongleongconnect.mobileconnect.SplashScreenActivity
+
+hlb_connect_alt_1: {}
