--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,16 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+dark_note:
+  - com.akapps.dailynote/com.akapps.dailynote.activity.Homepage
+
+motionlock:
+  - us.spotco.motionlock/us.spotco.motionlock.MainActivity
+
+proton_wallet:
+  - me.proton.wallet.android/me.proton.wallet.android.activity.MainActivity
+
+upgrade:
+  - com.upgrademobile/com.upgrademobile.MainActivity
