--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -25,3 +25,24 @@ proton_wallet:
 
 upgrade:
   - com.upgrademobile/com.upgrademobile.MainActivity
+
+private_dns_quick_toggle:
+  - ru.karasevm.privatednstoggle/ru.karasevm.privatednstoggle.ui.MainActivity
+
+amazon:
+  - in.amazon.mShop.android.shopping/com.amazon.mShop.amazonpay.AmazonPayHomeActivityAliasWoShortcuts
+
+discover_mobile:
+  - com.discoverfinancial.mobile/m08f3ec30.pf7b8c22e.se3c65e91.ee80de999
+
+owl:
+  - io.github.yamin8000.owl/io.github.yamin8000.owl.ui.MainActivity
+
+stardew_valley:
+  - com.chucklefish.stardewvalley/com.chucklefish.stardewvalley.MainActivity
+
+fossify_launcher_blue:
+  - org.fossify.home/org.fossify.home.activities.SplashActivity.Blue
+
+finshell_pay:
+  - com.finshell.fin/com.finshell.fin.Default
