Add icons + ComponentInfos, fixes

--- a/contribs/requests.yml
+++ b/contribs/requests.yml
@@ -31,16 +31,6 @@ com.bluepoch.m.en.reverse1999/com.ssgame.mobile.overseas.frame.activity.AppStart
         - https://f-droid.org/en/packages/com.bluepoch.m.en.reverse1999/
         - https://google.com/search?q=com.bluepoch.m.en.reverse1999
 
-com.kddi.android.cmail/com.kddi.android.cmail.ui.list.ThreadListActivity:
-    name: Message(SMS)
-    reqt: 5
-    reql: 2024-09-20 06:57:20
-    hash: 45a89cac1b45f6d2dbf4bc4e07e8f1eb24ef8955
-    urls:
-        - https://play.google.com/store/apps/details?id=com.kddi.android.cmail
-        - https://f-droid.org/en/packages/com.kddi.android.cmail/
-        - https://google.com/search?q=com.kddi.android.cmail
-
 com.hidive.android/com.imggaming.dicemobile.MainActivity:
     name: HIDIVE
     reqt: 4
@@ -50,16 +40,6 @@ com.hidive.android/com.imggaming.dicemobile.MainActivity:
         - https://play.google.com/store/apps/details?id=com.hidive.android
         - https://f-droid.org/en/packages/com.hidive.android/
         - https://google.com/search?q=com.hidive.android
-
-com.scottgames.fnaf2/com.scottgames.fnaf2.Main:
-    name: Five Nights at Freddy's 2
-    reqt: 4
-    reql: 2024-11-12 02:03:48
-    hash: f0e153ad3b133ab41858e87b5b4a4446297784c1
-    urls:
-        - https://play.google.com/store/apps/details?id=com.scottgames.fnaf2
-        - https://f-droid.org/en/packages/com.scottgames.fnaf2/
-        - https://google.com/search?q=com.scottgames.fnaf2
 
 com.hdictionary.bn/com.hdictionary.bn.DictionaryActivity:
     name: Bangla Dictionary
@@ -80,26 +60,6 @@ com.studio27.MelonPlayground/com.unity3d.player.UnityPlayerActivity:
         - https://play.google.com/store/apps/details?id=com.studio27.MelonPlayground
         - https://f-droid.org/en/packages/com.studio27.MelonPlayground/
         - https://google.com/search?q=com.studio27.MelonPlayground
-
-com.proximabeta.aoemobile/com.proximabeta.aoemobile.MainActivity:
-    name: Age of Empires Mobile
-    reqt: 3
-    reql: 2024-11-24 10:40:09
-    hash: 1b6b59338d4e4b6f7f8cdbaebccb9e0dde75c56b
-    urls:
-        - https://play.google.com/store/apps/details?id=com.proximabeta.aoemobile
-        - https://f-droid.org/en/packages/com.proximabeta.aoemobile/
-        - https://google.com/search?q=com.proximabeta.aoemobile
-
-com.epifi.paisa/com.epifi.paisa.ui.MainActivity:
-    name: Fi
-    reqt: 3
-    reql: 2024-11-16 03:53:31
-    hash: 670b0772fb555f9d93e65d3bc959138295ad32b2
-    urls:
-        - https://play.google.com/store/apps/details?id=com.epifi.paisa
-        - https://f-droid.org/en/packages/com.epifi.paisa/
-        - https://google.com/search?q=com.epifi.paisa
 
 com.hutchgames.formularacing/com.unity3d.player.UnityPlayerActivity:
     name: F1 Clash
@@ -211,16 +171,6 @@ com.topstack.kilonotes.pad/com.topstack.kilonotes.base.splash.SplashActivity:
         - https://f-droid.org/en/packages/com.topstack.kilonotes.pad/
         - https://google.com/search?q=com.topstack.kilonotes.pad
 
-in.amazon.mShop.android.shopping/com.amazon.mShop.amazonpay.AmazonPayHomeActivityAliasWoShortcuts:
-    name: Amazon Pay
-    reqt: 2
-    reql: 2024-11-30 07:58:21
-    hash: 742afd7fedd6d37eded2cec32695fa89cb0a01d5
-    urls:
-        - https://play.google.com/store/apps/details?id=in.amazon.mShop.android.shopping
-        - https://f-droid.org/en/packages/in.amazon.mShop.android.shopping/
-        - https://google.com/search?q=in.amazon.mShop.android.shopping
-
 com.thomsonreuters.reuters/com.thomsonreuters.reuters.MainActivity:
     name: Reuters
     reqt: 2
@@ -250,16 +200,6 @@ com.teuxdeux.twa/com.teuxdeux.MainActivity:
         - https://play.google.com/store/apps/details?id=com.teuxdeux.twa
         - https://f-droid.org/en/packages/com.teuxdeux.twa/
         - https://google.com/search?q=com.teuxdeux.twa
-
-com.discoverfinancial.mobile/m08f3ec30.pf7b8c22e.se3c65e91.ee80de999:
-    name: Discover
-    reqt: 2
-    reql: 2024-11-28 08:06:54
-    hash: 528a48a60a298c85d1a317d68fd4699a4fca4a40
-    urls:
-        - https://play.google.com/store/apps/details?id=com.discoverfinancial.mobile
-        - https://f-droid.org/en/packages/com.discoverfinancial.mobile/
-        - https://google.com/search?q=com.discoverfinancial.mobile
 
 com.goodwy.gallery/com.goodwy.gallery.activities.SplashActivity.Original:
     name: Gallery
@@ -370,16 +310,6 @@ io.safepal.wallet/io.safepal.safepalapp.MainActivity:
         - https://play.google.com/store/apps/details?id=io.safepal.wallet
         - https://f-droid.org/en/packages/io.safepal.wallet/
         - https://google.com/search?q=io.safepal.wallet
-
-com.chucklefish.stardewvalley/com.chucklefish.stardewvalley.MainActivity:
-    name: Stardew Valley
-    reqt: 2
-    reql: 2024-11-21 14:27:06
-    hash: 938bfa6138d5542ca95439ee866b9718b2ef7961
-    urls:
-        - https://play.google.com/store/apps/details?id=com.chucklefish.stardewvalley
-        - https://f-droid.org/en/packages/com.chucklefish.stardewvalley/
-        - https://google.com/search?q=com.chucklefish.stardewvalley
 
 com.discord/com.discord.main.MainY2K:
     name: Discord
@@ -540,16 +470,6 @@ com.grofers.customerapp/com.grofers.customerapp.DEEPAWALI:
         - https://play.google.com/store/apps/details?id=com.grofers.customerapp
         - https://f-droid.org/en/packages/com.grofers.customerapp/
         - https://google.com/search?q=com.grofers.customerapp
-
-com.itau/br.com.itau.pf.modules.features.appUse.appStart.splash.view.SplashActivity:
-    name: Itaú
-    reqt: 2
-    reql: 2024-11-12 11:06:36
-    hash: bfba8176c29bd7e80e948edc4ee650f574cc3ee0
-    urls:
-        - https://play.google.com/store/apps/details?id=com.itau
-        - https://f-droid.org/en/packages/com.itau/
-        - https://google.com/search?q=com.itau
 
 com.basicfit.trainingApp/com.basicfit.trainingApp.MainActivity:
     name: Basic-Fit
@@ -3011,9 +2931,8 @@ com.brucemax.boxintervals/com.brucemax.boxintervals.activities.SplashActivity:
         - https://f-droid.org/en/packages/com.brucemax.boxintervals/
         - https://google.com/search?q=com.brucemax.boxintervals
 
-? mx.com.banjercito.model.common.VTUserApplicationBJCTMB/mx.com.banjercito.model.common.VTUserApplicationBJCTMB.VTCommonActivity
-
-:   name: Banjecel
+mx.com.banjercito.model.common.VTUserApplicationBJCTMB/mx.com.banjercito.model.common.VTUserApplicationBJCTMB.VTCommonActivity:
+   name: Banjecel
     reqt: 1
     reql: 2024-11-16 12:06:46
     hash: 3481aa19be19ebeae0780f6076c2c28c55132317
@@ -10303,9 +10222,8 @@ com.maxpatchs.moxy/com.maxpatchs.moxy.activities.MainActivity:
         - https://f-droid.org/en/packages/com.maxpatchs.moxy/
         - https://google.com/search?q=com.maxpatchs.moxy
 
-? com.crosshair.crosshairgenerator.crosshairtool.improveshootingaccuracy.aimhelper.shootingassistant.aim/crosshair.cyber.asdcca.crosshair.InitialStarting
-
-:   name: aCrossHair Para Jogos
+com.crosshair.crosshairgenerator.crosshairtool.improveshootingaccuracy.aimhelper.shootingassistant.aim/crosshair.cyber.asdcca.crosshair.InitialStarting:
+    name: aCrossHair Para Jogos
     reqt: 1
     reql: 2024-09-20 20:33:06
     hash: 9646fd07257c19115badbbeb3e05fef23166ba74
@@ -12344,9 +12262,8 @@ nz.govt.at.atmobile/nz.govt.at.atmobile.MainActivity:
         - https://f-droid.org/en/packages/nz.govt.at.atmobile/
         - https://google.com/search?q=nz.govt.at.atmobile
 
-? scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN
-
-:   name: Calc84
+scientific.graphing.calculator.t84.t36.t83/scientific.graphing.calculator.t84.t36.t83.main.ytivitcArotaluclaCecneicS_cxpFVWKLpGyBWv_deQTOWpN_ABjPMN:
+    name: Calc84
     reqt: 1
     reql: 2024-09-02 22:52:20
     hash: 8a805790c05cdbd7a6bc5fb88a4e4b6e4dd99a6e
@@ -12445,9 +12362,8 @@ com.hisn.almuslim/com.hisn.almuslim.activity.SplashActivity:
         - https://f-droid.org/en/packages/com.hisn.almuslim/
         - https://google.com/search?q=com.hisn.almuslim
 
-? com.phonelocator.mobile.number.locationfinder.callerid/com.phonelocator.mobile.number.locationfinder.callerid.main.PreActivity
-
-:   name: Mobile Number Locator
+com.phonelocator.mobile.number.locationfinder.callerid/com.phonelocator.mobile.number.locationfinder.callerid.main.PreActivity:
+    name: Mobile Number Locator
     reqt: 1
     reql: 2024-09-02 13:28:39
     hash: 824cc3ca540737abf04456aef785d629c40bf8c6
