--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,26 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+amazon:
+  - in.amazon.mShop.android.shopping/com.amazon.mShop.amazonpay.AmazonPayHomeActivityAliasWoShortcuts
+
+discover_mobile:
+  - com.discoverfinancial.mobile/m08f3ec30.pf7b8c22e.se3c65e91.ee80de999
+
+stardew_valley:
+  - com.chucklefish.stardewvalley/com.chucklefish.stardewvalley.MainActivity
+
+banco_itau:
+  - com.itau/br.com.itau.pf.modules.features.appUse.appStart.splash.view.SplashActivity
+
+five_nights_at_freddys_2:
+  - com.scottgames.fnaf2/com.scottgames.fnaf2.Main
+
+age_of_empires_mobile:
+  - com.proximabeta.aoemobile/com.proximabeta.aoemobile.MainActivity
+
+fi_money:
+  - com.epifi.paisa/com.epifi.paisa.ui.MainActivity
+
+plus_message:
+  - com.kddi.android.cmail/com.kddi.android.cmail.ui.list.ThreadListActivity
