Added Etsy, I Am, & Square POS icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -61,3 +61,23 @@ fossify_launcher_blue:
 
 finshell_pay:
   - com.finshell.fin/com.finshell.fin.Default
+
+etsy_seller:
+  - com.etsy.butter.sell_on_etsy/com.etsy.butter.sell_on_etsy.MainActivity
+
+expressvpn:
+  - com.expressvpn.vpn/com.expressvpn.vpn.ui.SplashActivity
+  - com.expressvpn.vpn/com.expressvpn.splash.SplashActivity
+
+migraine_buddy:
+  - com.healint.migraineapp/com.healint.migraineapp.view.activity.launcher.LauncherActivity
+
+opl_mobile:
+  - com.bibliocommons.opl/com.bibliocommons.ui.activities.splash.SplashActivity
+  - com.bibliocommons.opl/com.bibliocommons.ui.activities.splash.CustomInitialActivity
+
+square_point_of_sale:
+  - com.squareup/com.squareup.ui.PaymentActivity
+
+i_am:
+  - com.hrd.iam/com.hrd.view.onboarding.OnboardingSplashActivity
