--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -142,7 +142,7 @@ calcy_iv:
   - tesmath.calcy/com.tesmath.calcy.common.StartupActivity
 
 nhs_app:
-  - com.nhs.online.nhsonline/com.nhs.online.nhsonline.MainActivity<
+  - com.nhs.online.nhsonline/com.nhs.online.nhsonline.MainActivity
 
 sonolus:
   - com.FosFenes.Sonolus/com.fosfenes.sonolus.SonolusActivity
