--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -365,3 +365,18 @@ sonic_drive_in:
 
 the_metronome:
   - com.soundbrenner.pulse/com.soundbrenner.pulse.aliasClassic
+
+boat_hearables:
+  - com.boAt.hearables/com.boAt.hearables.ui.main.SplashActivity
+
+reuters:
+  - com.thomsonreuters.reuters/com.thomsonreuters.reuters.MainActivity
+
+samsung_studio:
+  - com.sec.android.app.vepreload/com.sec.android.app.vepreload.common.activity.ProjectShortcutActivity
+
+citi_bike:
+  - com.citibikenyc.citibike/com.lyft.android.lastmile.ui.LastMileMainActivity
+
+cfe_contigo:
+  - mx.com.cfe.cfecontigo/mx.com.cfe.cfecontigo.ui.login.LoginActivity
