--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -380,3 +380,12 @@ citi_bike:
 
 cfe_contigo:
   - mx.com.cfe.cfecontigo/mx.com.cfe.cfecontigo.ui.login.LoginActivity
+
+home_tv:
+  - com.dinhlap.hometv/com.dinhlap.hometv.activity.Home
+
+trend_micro_mobile_security:
+  - com.trendmicro.tmmspersonal/com.trendmicro.tmmssuite.consumer.login.ui.Login
+
+tim_modem:
+  - it.telecomitalia.centoottantasette/it.telecomitalia.centoottantasette.StartClient187
