--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -389,3 +389,12 @@ trend_micro_mobile_security:
 
 tim_modem:
   - it.telecomitalia.centoottantasette/it.telecomitalia.centoottantasette.StartClient187
+
+zinli:
+  - com.zinli.app/com.zinli.app.MainActivity
+
+xtb:
+  - com.xtb.xmobile2/com.xtb.xmobile2.ui.root.SingleRootActivity
+
+safepal:
+  - io.safepal.wallet/io.safepal.safepalapp.MainActivity
