Add icons + ComponentInfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -398,3 +398,47 @@ xtb:
 
 safepal:
   - io.safepal.wallet/io.safepal.safepalapp.MainActivity
+
+no_icon:
+  - com.tblenovo.center/com.tblenovo.center.SplashActivity
+
+secureauth_authenticate:
+  - secureauth.android.token/com.accepttomobile.common.ui.splash.SplashActivity
+
+yoosee:
+  - com.yoosee/com.jwkj.activity.LogoActivity
+
+working_hours_4b:
+  - fourbottles.bsg.workinghours4b/fourbottles.bsg.workinghours4b.gui.activities.MainActivity
+
+major:
+  - groupemajor.symbilityhealth.mobileclaims/ca.symbilityhealth.mobileclaims.splash.view.SplashActivity
+
+bell_mts_myaccount:
+  - ca.mts.myaccount/ca.mts.myaccount.SplashActivity
+
+shoppers:
+  - com.loblaw.shoppersdrugmart/com.loblaw.shoppersdrugmart.app.ui.MainActivity
+
+set_edit:
+  - com.weberdo.apps.serviceinfo/com.weberdo.apps.serviceinfo.MainActivity
+
+quickmemo:
+  - com.note.penta.pentanote/com.note.penta.pentanote.biometric.BiometricLoginActivity
+
+bible:
+  - bible.pray.daily.women.offline.kjv/com.code.bibleproject.activity.SplashActivity
+
+workout:
+  - abs.a_15mins.challenge.workout.homeworkout.training.a_6pack.sixpack.sixpackabs/com.rightsol.healthapp.health_app.MainActivity
+
+quickmemo:
+  - com.topstack.kilonotes.pad/com.topstack.kilonotes.base.splash.SplashActivity
+  - com.RanaSourav.android.notes/com.RanaSourav.android.notes.SplashActivity
+
+weather:
+  - org.cwb/org.cwb.ui.LauncherActivity
+  - com.inmobi.weather/com.handmark.expressweather.ui.activities.MainActivity
+
+zenless_zone_zero:
+  - com.HoYoverse.Nap/com.mihoyo.combosdk.ComboSDKActivity
