Added Logi Circle and QCY icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -365,3 +365,9 @@ sonic_drive_in:
 
 the_metronome:
   - com.soundbrenner.pulse/com.soundbrenner.pulse.aliasClassic
+
+logi_circle:
+  - com.logitech.circle/com.logitech.circle.presentation.activity.SplashActivity
+
+qcy:
+  - com.qcymall.googleearphonesetup/com.qcymall.earphonesetup.ui.FirstStartActivityV2
